--- a/src/ndtp_ids/templates/alerts.html
+++ b/src/ndtp_ids/templates/alerts.html
@@ -40,6 +40,7 @@
         <a href="/alerts" class="active">Алерты</a>
         <a href="/rules">Правила Suricata</a>
         <a href="/training">Обучение</a>
+        <a href="/hybrid">Гибридный анализ</a>
     </div>
     <div class="container">
         <div id="alerts-list" style="margin-top: 10px;">Загрузка...</div>
