--- a/src/ndtp_ids/templates/dashboard.html
+++ b/src/ndtp_ids/templates/dashboard.html
@@ -252,6 +252,7 @@
         <a href="/alerts">Алерты</a>
         <a href="/rules">Правила Suricata</a>
         <a href="/training">Обучение</a>
+        <a href="/hybrid">Гибридный анализ</a>
     </div>
     
     <div class="container">
