--- a/src/ndtp_ids/templates/training.html
+++ b/src/ndtp_ids/templates/training.html
@@ -50,11 +50,11 @@
 <body>
     <h1>Управление обучением и ML-моделью</h1>
     <div class="nav">
-        <a href="/">Дашборд</a>
+        <a href="/">Dashboard</a>
         <a href="/monitoring">Мониторинг</a>
-        <a href="/alerts">Алерты</a>
         <a href="/hosts">Хосты</a>
-        <a href="/rules">Правила</a>
+        <a href="/alerts">Алерты</a>
+        <a href="/rules">Правила Suricata</a>
         <a href="/training">Обучение</a>
         <a href="/hybrid">Гибридный анализ</a>
     </div>
