--- a/src/ndtp_ids/templates/monitoring.html
+++ b/src/ndtp_ids/templates/monitoring.html
@@ -97,6 +97,7 @@
         <a href="/alerts">Алерты</a>
         <a href="/rules">Правила Suricata</a>
         <a href="/training">Обучение</a>
+        <a href="/hybrid">Гибридный анализ</a>
     </div>
 
     <div class="container">
