--- a/src/ndtp_ids/templates/rules.html
+++ b/src/ndtp_ids/templates/rules.html
@@ -193,6 +193,7 @@
         <a href="/alerts">Алерты</a>
         <a href="/rules" class="active">Правила Suricata</a>
         <a href="/training">Обучение</a>
+        <a href="/hybrid">Гибридный анализ</a>
     </div>
 
     <div class="container">
